# FastAPI_Learning

02_student_sinup/: pyproject.toml
02_student_sinup/src/02_student_sinup/: __init__.py  main.py
hello_fastapi/: pyproject.toml
hello_fastapi/src/hello_fastapi/: __init__.py  app.py  main.py
hello_fastapi/src/hello_fastapi/db/: todo_db.py
hello_fastapi/src/hello_fastapi/routes/: todo_routes.py
hello_fastapi/src/hello_fastapi/utilities/: todo_utilities.py
mongo_fastapi/: pyproject.toml
mongo_fastapi/src/mongo_fastapi/: __init__.py  main.py
mongo_fastapi/src/mongo_fastapi/db/: bd.py
postgress_sql/: .gitignore  README.md  pyproject.toml
postgress_sql/src/: main.py
postgress_sql/src/alembic/: env.py
postgress_sql/src/alembic/versions/: 25e27c2b4d78_created_todo_table.py  4e240c824140_created_todo_table.py  5c28f5a071d2_create_users_table.py  97ebe643f31b_updated_todo_table.py  9988fbc21eff_changed_column.py  c24ebf8d793e_changed_column.py
postgress_sql/src/config/: database.py
postgress_sql/src/models/: todo_models.py
postgress_sql/src/postgress_sql/: __init__.py
postgress_sql/src/routes/: todo_routes.py  users_routes.py
postgress_sql/src/utils/: utils_helper.py
postgress_sql/src/validations/: validation.py
