[project]
name = "02-student-sinup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Umer", email = "razzaq6047@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[project.scripts]
02-student-sinup = "02_student_sinup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
