[project]
name = "01-hello-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Umer", email = "razzaq6047@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[project.scripts]
01-hello-fastapi = "01_hello_fastapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
