[project]
name = "mongo-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Umer", email = "razzaq6047@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pymongo>=4.12.0",
]

[project.scripts]
mongo-fastapi = "mongo_fastapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
