[project]
name = "postgress-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Umer", email = "razzaq6047@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
postgress-sql = "postgress_sql:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
